JDP230502-15 - corrections according to errors pointed out by Circle
 On branch JDP230502-15
 Your branch is up to date with 'origin/JDP230502-15'.

 Changes to be committed:
	modified:   build.gradle
	modified:   src/main/java/com/kodilla/ecommercee/dto/UserDto.java
	modified:   src/main/java/com/kodilla/ecommercee/mapper/UserMapper.java