@@ -5,6 +5,7 @@ import com.kodilla.ecommercee.dto.UserDto;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class UserMapper {
@@ -28,10 +29,10 @@ public class UserMapper {
     }
 
     public List<UserDto> mapToUserDtoList(final List<User> userList) {
-        return userList.stream().map(this::mapToUserDto).toList();
+        return userList.stream().map(user -> mapToUserDto(user)).collect(Collectors.toList());
     }
 
     public List<User> mapToUserList(final List<UserDto> userDtoList) {
-        return userDtoList.stream().map(this::mapToUser).toList();
+        return userDtoList.stream().map(user -> mapToUser(user)).collect(Collectors.toList());
     }
 }
